# Healthcare-virtual-assistant-demo

./: .gitignore  AGENTCORE_GATEWAY_MIGRATION.md  CONSISTENT_STRUCTURE_UPDATE.md  DEPLOYMENT_WORKFLOW.md  README.md  README_gateway_test.md  SEMANTIC_SEARCH_DEPLOYMENT.md  SESSION_MANAGEMENT_IMPLEMENTATION.md  UPLOAD_FIX_SUMMARY.md  amplify.yml  api-outputs.json  app.py  cdk.context.json  cdk.json  cloudwatch_log_filters.md  cost_calculator.md  fix-s3-upload.md  requirements.txt  test_agent.py  test_gateway_tools.py  test_payload.json
.kiro/hooks/: docs-sync-hook.kiro.hook  localization-translation-hook.kiro.hook  test-sync-hook.kiro.hook
.kiro/steering/: product.md  structure.md  tech.md
agents/: .dockerignore  .env.example  Dockerfile  GUARDRAILS_SIMPLIFICATION.md  README.md  __init__.py  config.py  debug_patient_id.py  debug_response.py  demo_session_management.py  docker-compose.yml  healthcare_agent.py  integration_test.py  logging_config.py  main.py  pyproject.toml  run_with_logging_test.py  session_management_example.py  test_agentcore_compliance.py  test_basic_functionality.py  test_comprehensive_final.py  test_detailed_error.py  test_endpoints_direct.py  test_exact_agent.py  test_extraction.py  test_fastapi_flow.py  test_gateway_tools.py  test_guardrail_monitoring.py  test_guardrails.py  test_llm_patient_lookup.py  test_logging.py  test_mcp_gateway.py  test_minimal_agent.py  test_patient_andres.py  test_patient_integration.py  test_patient_lookup_final.py  test_patient_simple.py  test_schema_alignment.py  test_session_management.py  test_simple_agent.py
agents/appointment_scheduling/: __init__.py  agent.py
agents/docs/: mcp_gateway_integration.md
agents/info_retrieval/: __init__.py  agent.py
agents/orchestrator/: __init__.py  agent.py
agents/prompts/: README.md  __init__.py  appointment_scheduling.md  healthcare.md  information_retrieval.md  orchestrator.md  patient_analysis.md  patient_context_extraction.md  patient_extraction.md  test_prompts.md
agents/schemas/: README.md  agentcore_multimodal_request.json  agentcore_response.json  chat_response.json  loading_state.json  send_message_request.json  strands_multimodal_format.json  structured_output.json
agents/shared/: __init__.py  config.py  context.py  coordination.py  guardrail_monitoring_hook.py  guardrails.py  healthcare_api_tools.py  invocation_state.py  knowledge_base_tools.py  mcp_client.py  mcp_gateway_tools.py  mcp_sigv4_client.py  memory_logger.py  models.py  patient_identification.py  prompts.py  schema_validator.py  utils.py
agents/tools/: file_reference.py  multimodal_uploader.py  patient_lookup.py
apps/amplify/: README.md  amplify.yml  backend.d.ts  backend.js  backend.ts  package.json  tsconfig.json
apps/api/: __init__.py
apps/frontend/: .env.development  .env.example  .env.production  .gitignore  AGENTCORE_INTEGRATION.md  DEBUG_README.md  DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  README.md  amplify.yml  index.html  package.json  test-patient-integration.js
aw_some_builder2/: aw_some_builder2_stack.py
config/: config.json  tags.json
docs/: .$AWSomeBuilder2.drawio.bkp  AWSomeBuilder2.drawio  CHATBOT_UI_IMPROVEMENTS.md  DATA_LOADING.md  GENAI_CLOUDSCAPE_COMPLIANCE.md  README.md  agent_verbose_behavior_fix.md  data_model_diagram.drawio  database_schema.sql  files_lambda_deployment.md  files_lambda_fix.md  frontend_guardrail_debugging.md  guardrail_detection_fix.md  guardrail_monitoring.md  memory_options_comparison.md  multimodal_upload_fix.md  notes_spec.md  orchestration_strategy.md  session_management_fix.md  token_optimization.md
docs/ai-docs/: AGENTCORE_MIGRATION.md  AGENT_SIMPLIFICATION_SUMMARY.md  AI_PATIENT_IDENTIFICATION.md  AMPLIFY_SECRETS.md  AMPLIFY_STORAGE_FIX_SUMMARY.md  BUCKET_CONFIG_FIX_SUMMARY.md  BUCKET_ERROR_FIX_ATTEMPT.md  CDK_DEPLOYMENT_SUMMARY.md  CHAT_FILE_UPLOAD_FIX.md  CHAT_IMPLEMENTATION.md  CONFIGURATION_MIGRATION.md  DEPLOYMENT.md  DYNAMIC_BUCKET_CONFIG_SETUP.md  EXTRACTION_LAMBDA_FIX.md  FILES_API_ERROR_FIX.md  FILE_UPLOAD_WITHOUT_PATIENT.md  FRONTEND_FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LAYOUT_IMPLEMENTATION.md  LOCALIZATION_AND_AUTH_SETUP.md  LOGGING_README.md  MARKDOWN_GUIDE.md  MCP_GATEWAY_INTEGRATION.md  MEMORY_TESTING.md  METADATA_VERIFICATION_SUMMARY.md  MULTIMODAL_UPLOAD_WORKFLOW.md  NOTIFICATION_SYSTEM.md  PATIENT_INTEGRATION_SUMMARY.md  PATIENT_LOOKUP_CLEAN.md  README.md  README_STRUCTURED_OUTPUT.md  RUNTIME_CONFIG.md  SESSION_MANAGEMENT.md  SIMPLIFICATION_SUMMARY.md  SIMPLIFIED_ARCHITECTURE.md  STRANDS_PATTERNS_SUMMARY.md  agentcore_iam_authentication.md  cedula_field_implementation.md  event-handler-summary.md  patient-context-sync.md  (+3 more)
docs/api/: document_upload_api.md  scheduling_api_reference.md
docs/architecture/: .$AWSomeBuilder2.drawio.bkp  README.md
docs/costs_estimation/: amplify_cloudformation.json  awsomebuilder2_notes.md  client_requirements_summary.md  config.json  cost_estimates_summary.json  cost_estimation.md  (+4 more)
infrastructure/: __init__.py
lambdas/: __init__.py
scripts/: README.md  __init__.py  add_cedula_field.py  analyze_s3_errors.py  build-agent-container.sh  deploy-frontend.sh  load_sample_data.py  monitor-document-workflow.sh  test-document-workflow.sh  test_data_loader.py  test_migration.py
shared/: __init__.py
(+295 files in other folders)
